[package]
name = "zingo-regchest"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
zingo-testutils = { git = "https://github.com/Oscar-Pepper/zingolib.git", version = "0.1.0", branch = "regchest" }

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false

