[package]
name = "regchest"
version = "0.1.0"
edition = "2021"

[dependencies]
zingo-testutils = { git="https://github.com/zingolabs/zingolib.git", default-features=true, branch = "dev" }
tokio = "1.32.0"

[patch.crates-io]
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", branch = "release-lwsdk-2.0.0" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", branch = "release-lwsdk-2.0.0" }

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false

