[package]
name = "regchest"
version = "0.1.0"
edition = "2021"

[features]
default = ["funded_orchard_mobileclient"]
funded_orchard_mobileclient = []
funded_orchard_with_3_txs_mobileclient = []
funded_orchard_sapling_transparent_shielded_mobileclient = []

[dependencies]
zingolib = { git="https://github.com/zingolabs/zingolib.git", default-features=true, branch = "dev", features=[ "test-elevation" ] }
tokio = "1.32.0"

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false
